@@ -12,6 +12,9 @@ fi
 
 upper_system=`echo $system | tr a-z A-Z`
 hostname=`grep TARGET_HOST_NAME src/include/${system}.h | head -1 | awk '{print $3}'`
+adccount=`grep TARGET_ADC_COUNT src/include/${system}.h | head -1 | awk '{print $3}'`
+daccount16=`grep TARGET_DAC16_COUNT src/include/${system}.h | head -1 | awk '{print $3}'`
+daccount18=`grep TARGET_DAC18_COUNT src/include/${system}.h | head -1 | awk '{print $3}'`
 site=`grep site= target/${system}epics/${system}epics*.cmd | sed 's/.*site=\([a-z]*\).*/\1/g'`
 if test ${site}no = no; then echo Please make $system first; exit 1; fi
 upper_site=`echo $site | tr a-z A-Z`
@@ -123,8 +126,30 @@ if [ \`hostname\` != '${hostname}' ]; then
 fi
 
 /opt/rtcds/$site/${lower_ifo}/scripts/kill${system}
-
 sleep 5
+
+ADC_COUNT=\`lspci -v | grep 3101 | wc -l\`
+DAC16_COUNT=\`lspci -v | grep 3120 | wc -l\`
+DAC18_COUNT=\`lspci -v | grep 3357 | wc -l\`
+echo Number of ADC cards on bus = \$ADC_COUNT 
+echo Number of DAC16 cards on bus = \$DAC16_COUNT 
+echo Number of DAC18 cards on bus = \$DAC18_COUNT 
+if (( \$ADC_COUNT < $adccount )); then
+        echo Cannot run: Expected $adccount ADC cards, but only found \$ADC_COUNT cards on bus
+        exit 1
+fi
+
+if (( \$DAC16_COUNT < $daccount16 )); then
+        echo Cannot run: Expected $daccount16 16bitDAC cards, but only found \$DAC16_COUNT cards on bus
+        exit 1
+fi
+
+if (( \$DAC18_COUNT < $daccount18 )); then
+        echo Cannot run: Expected $daccount18 16bitDAC cards, but only found \$DAC18 cards on bus
+        exit 1
+fi
+
+
 (cd /opt/rtcds/$site/${lower_ifo}/target/${system}/${system}epics && ./startup${ifo})
 sleep 5
 /opt/rtcds/$site/${lower_ifo}/target/${system}/scripts/startup${ifo}rt
